testsuite/tests/lkt/import/invalid/invalid_module_name.lkt
import common_

class Example: FooNode implements TokenNode {
}
